screenshot: fall back to $HOME when saving into XDG_PICTURES_DIR fails

As a last resort, save screenshots in $HOME when everything else fails.

https://bugzilla.gnome.org/show_bug.cgi?id=672833